--- a/01_dockerfiles/ex01/dockerfile
+++ b/01_dockerfiles/ex01/dockerfile
@@ -14,3 +14,7 @@ RUN apt-get update && \
 
 WORKDIR teamspeak3-server_linux_amd64
 ENTRYPOINT sh ts3server_minimal_runscript.sh
+
+# docker build -t ex01 .
+# docker run --rm -p 9987:9987/udp -p 10011:10011 -p 30033:30033 ex01
+
