--- a/01_dockerfiles/ex02/Dockerfile
+++ b/01_dockerfiles/ex02/Dockerfile
@@ -1,4 +1,2 @@
-FROM ft-rails:on-build
-
-EXPOSE 3000
-CMD [ "rails" , "s", "-b", "0.0.0.0", "-p", "3000"]
+FROM ft-rails
+CMD ["rails", "s", "-b", "0.0.0.0"]
