--- a/01_dockerfiles/ex03/Dockerfile
+++ b/01_dockerfiles/ex03/Dockerfile
@@ -1,25 +1,37 @@
-FROM ubuntu:16.04
 
-LABEL maintainer="Roelf Diedericks"
+FROM golang
 
-ENV TERM xterm
+RUN apt-get update -y &&\
+	apt-get upgrade -y &&\
+	apt-get install git gcc wget -y &&\
+	apt-get install libpam0g-dev -y
 
-RUN apt-get update
+EXPOSE 3000
 
-RUN apt-get update && \
-	DEBIAN_FRONTEND=noninteractive \
-	apt-get install -y --no-install-recommends \
-	wget ca-certificates postfix openssh-server
-RUN wget https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.deb.sh && \
-	chmod 777 script.deb.sh && \
-	./script.deb.sh
+RUN adduser --disabled-login --gecos 'Gogs' git
+USER git
 
-RUN EXTERNAL_URL="http://192.168.99.100:8080"
+WORKDIR /home/git
+RUN mkdir -p local
 
-RUN apt-get install -y tzdata gitlab-ce
+RUN wget https://storage.googleapis.com/golang/go1.10.linux-amd64.tar.gz &&\
+	tar -C /home/git/local -xzf go1.10.linux-amd64.tar.gz
 
-EXPOSE 443 80 22
+ENV GOROOT=/home/git/local/go
+ENV GOPATH=/home/git/go
+ENV PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 
-CMD (/opt/gitlab/embedded/bin/runsvdir-start &) && \
-	gitlab-ctl reconfigure && \
-	tail -f /dev/null
+RUN mkdir -p $GOPATH/src/github.com/gogits &&\
+	cd $GOPATH/src/github.com/gogits &&\
+	git clone --depth=1 -b develop https://github.com/gogits/gogs &&\
+	cd gogs &&\
+	go build
+
+WORKDIR $GOPATH/src/github.com/gogits/gogs
+RUN go get -u -tags "sqlite pam cert" github.com/gogits/gogs &&\
+	go build -tags "sqlite pam cert"
+
+USER root
+
+WORKDIR $GOPATH/src/github.com/gogits/gogs
+ENTRYPOINT ["./gogs", "web"]
